[package]
name = "cratetorrent-cli"
version = "0.1.0"
authors = ["mandreyel <mandreyel@protonmail.com>"]
description = "A simple BitTorrent V1 CLI client"
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cratetorrent = { path = "../cratetorrent" }
flexi_logger = "0.16"
futures = "0.3"
hex = "0.4"
log = "0.4"
structopt = "0.3"
termion = "1.5"
tokio = { version = "0.2", features = ["fs", "io-std", "macros", "rt-threaded"] }
tui = "0.13"
