[package]
name = "cratetorrent-cli"
version = "0.1.0"
authors = ["mandreyel <mandreyel@protonmail.com>"]
description = "A simple BitTorrent V1 CLI client"
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cratetorrent = { path = "../cratetorrent" }
flexi_logger = "0.18.0"
futures = "0.3.15"
hex = "0.4.3"
log = "0.4.14"
structopt = "0.3.22"
termion = "1.5.6"
tokio = { version = "1.9.0", features = ["full"] }
tui = "0.15.0"
