[package]
name = "cratetorrent"
version = "0.1.0"
authors = ["mandreyel <mandreyel@protonmail.com>"]
description = "A simple BitTorrent V1 engine library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mandreyel/cratetorrent/"
homepage = "https://github.com/mandreyel/cratetorrent/"
keywords = ["bittorrent", "torrent", "p2p", "networking"]
categories = ["network-programming"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "0.19"
bytes = "0.5"
futures = "0.3"
hex = "0.4"
lazy_static = "1.4"
log = "0.4"
lru = "0.6"
nix = "0.19"
percent-encoding = "2.1"
reqwest = "0.10"
serde = "1.0"
serde_bencode = "0.2"
serde_bytes = "0.11"
serde_derive = "1.0"
sha-1 = "0.9"
# TODO(#76): update tokio when reqwest also updates it
tokio = { version = "0.2", features = ["blocking", "macros", "rt-threaded", "stream", "sync", "tcp", "time"] }
tokio-util = { version = "0.2", features = ["codec"] }
url = "2.2"

[dev-dependencies]
mockito = "0.28"
pretty_assertions = "0.6"
