[package]
name = "cratetorrent"
version = "0.1.0"
authors = ["mandreyel <mandreyel@protonmail.com>"]
description = "A simple BitTorrent V1 engine library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mandreyel/cratetorrent/"
homepage = "https://github.com/mandreyel/cratetorrent/"
keywords = ["bittorrent", "torrent", "p2p", "networking"]
categories = ["network-programming"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "0.19"
bytes = "1.0.1"
futures = "0.3.15"
hex = "0.4.3"
log = "0.4.14"
lru = "0.6.5"
nix = "0.22.0"
percent-encoding = "2.1.0"
reqwest = "0.11.4"
serde = "1.0.126"
serde_bencode = "0.2.3"
serde_bytes = "0.11.5"
serde_derive = "1.0.126"
sha-1 = "0.9.7"
# TODO(#76): update tokio when reqwest also updates it
tokio = { version = "1.9.0", features = ["full"] }
tokio-util = { version = "0.6.7", features = ["codec"] }
url = "2.2.2"

[dev-dependencies]
mockito = "0.30.0"
pretty_assertions = "0.7.2"
