[package]
name = "cratetorrent"
version = "0.2.0"
authors = ["mandreyel <mandreyel@protonmail.com>"]
description = "A simple BitTorrent V1 engine library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mandreyel/cratetorrent/"
homepage = "https://github.com/mandreyel/cratetorrent/"
keywords = ["bittorrent", "torrent", "p2p", "networking"]
categories = ["network-programming"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "0.19"
bytes = "1.0"
futures = "0.3"
hex = "0.4"
log = "0.4"
lru = "0.6"
nix = "0.22"
percent-encoding = "2.1"
reqwest = "0.11"
serde = "1.0"
serde_bencode = "0.2"
serde_bytes = "0.11"
serde_derive = "1.0"
sha-1 = "0.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "net", "time"] }
tokio-util = { version = "0.6", features = ["codec"] }
url = "2.2"

[dev-dependencies]
mockito = "0.30"
pretty_assertions = "0.7"
