[package]
name = "test-cli"
version = "0.1.0"
authors = ["mandreyel <mandreyel@protonmail.com>"]
edition = "2018"

[dependencies]
cratetorrent = { path = "../../cratetorrent" }
env_logger = "0.8"
hex = "0.4"
futures = "0.3"
log = "0.4"
structopt = "0.3"
tokio = { version = "0.2", features = ["fs", "macros", "rt-threaded"] }

# we want to tell cargo to not consider this package as part of the root
# workspace, otherwise we can't build
[workspace]
